--- a/index.html
+++ b/index.html
@@ -5,29 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="https://fonts.google.com/specimen/Outfit">
+  <link rel="stylesheet" href="styles.css">
   
   <title>Frontend Mentor | NFT preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Hassan Wanas</a>.
+  <div class="card">
+    <div class="card-image">
+      <img id="image" src="images/image-equilibrium.jpg" alt="equilibrium">
+      
+      <div class="overlay">
+        <img src="images/icon-view.svg" alt="">
+      </div>
+    </div>
+    <div class="header">
+      <h1><a href="#">Equilibrium #3429</a></h1>
+      <p>Our Equilibrium collection promotes balance and calm.</p>
+    </div>
+    <div class="data">
+      <div>
+        <img src="/images/icon-ethereum.svg" alt="ethereum">
+        <p class="data-1">0.041 ETH</p>
+      </div>
+      <div >
+        <img src="/images/icon-clock.svg" alt="clock">
+        <p class="data-2">3 days left</p>
+      </div>
+    </div>
+    <div class="avatar-section">
+      <img id="avatar" src="images/image-avatar.png" alt="avatar">
+      <p><span>Creation of</span> <a href="#">Jules Wyvern</a></p>
+    </div>
   </div>
 </body>
 </html>
